--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-.pages {
+body {
+    background-color: rgba(149, 149, 149, 0.177); /* Change this to any color */
+  }
+  
+  .pages {
   /* make it so the bar is sticky at top */
     z-index: 2;
     position: fixed;
@@ -245,7 +249,6 @@ form p {
     border-radius: 8px;
     text-align: center;
     width: 80%;
-    
     opacity: 0;
     visibility: hidden; 
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
@@ -268,3 +271,78 @@ form p {
     bottom: auto ;
     
 }
+
+.my-class{
+    background-color: aqua;
+
+
+}
+
+.Services{
+    position: absolute; 
+    transform: translate(50%, 225%);
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    border-radius: 20px;
+    width: 50%;
+    padding : 20px;
+    background-color: rgba(0, 0, 0, 0.37);
+}  
+
+.service1{
+    position: absolute;
+    top: 13%;
+    left: 5%;
+    border : 2px solid rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.37);
+}
+
+.service2{
+    position: absolute;
+    top: 70%;
+    left: 75%;
+    border : 2px solid rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.37);
+}
+
+
+#ImageContainer{
+    animation: Arise 1s;
+}
+
+@keyframes Arise {
+   
+  from {
+     transform: translate(0%, -50%);
+     opacity: 0;
+   }
+
+  to {
+     opacity: 1;
+     transform: translate(0%, 0%);
+
+  }
+
+}
+
+.pages{
+    animation: Arise 2s;
+}
+
+
+
+@keyframes  falling{
+    from{
+        transform: translate(0%, -200%);   
+    }
+    to{ 
+        transform: translate(0%, 0%);   
+        
+    }
+}
+
+    .Title, .socials{
+        animation: falling 2s;
+    }
