--- a/styles.css
+++ b/styles.css
@@ -179,50 +179,32 @@ nav {
     border: 2px solid rgb(0, 0, 0);
 }
 
-form {
-    
-    z-index: 10;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 20px;
-    display: flex;
-    flex-direction: column; 
-    width: 2 0%;
-    height: 65%;
-    background-color: rgba(0, 0, 0, 0.37);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+@keyframes appear {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
-
-form input {
-    margin: 5px;
-    border-radius: 8px;
-    font-size: 20px;
-    
-}
-
-form p {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    text-shadow: 2px 2px 2px black;
-}
-
-
 
 #SellCarImage {
+
+    animation: appear 3s forwards;
     display: flex;
     justify-content: center;
-    scale: 0.5;
+    scale: .5;
     position: relative;
-    transform: translate(-60%, 30%);
+    transform-origin: translate(50%, 50%);
+    transform: translate(0%, -205%);
+
 }
 
 #SellCarImage img {
     border-radius: 40px;
+    border: 4px solid rgb(0, 0, 0);
 }
 
 .hover-info {
@@ -386,7 +368,7 @@ video {
     color: white;
     text-shadow: 5px 5px 5px rgb(0, 0, 0);
     padding: 20px;
-    border-radius: 50px;
+    border-radius: 8px;
     margin-left: 5%;
     margin-right: 5%;
     font-weight: bold;
@@ -465,3 +447,148 @@ video {
     
 }
     
+
+@keyframes Panning {
+    from {
+        transform: translateY(50%);
+    }
+    to {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+@keyframes PanHeader {
+    from {
+        transform: translateX(50%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+}
+.sell-intro {
+    box-shadow: 0 0 50px rgb(0, 0, 0);
+
+    overflow: hidden;
+    margin-top: 10%;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    background-color: rgba(0, 0, 0, 0.37);
+    padding: 1%;
+}
+
+.sell-intro p{
+    animation: PanHeader 3s ease-out forwards;
+   
+    
+}
+
+.sell-info {
+    margin-top: 5%;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.37);
+    position: relative;
+    transform-origin: center;
+    transform: translate(1%, 0%);
+    width: 25%;
+    
+    padding-bottom: 10%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left:4%;
+    box-shadow: 0 0 50px rgb(0, 0, 0);
+
+
+
+}
+
+.sell-info h1 {
+    font-size: 40px;
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px 2px rgb(255, 0, 0);
+    
+
+}
+.sell-info p{
+    border-radius: 8px;
+    opacity: 0;
+    transform-origin: translate(50%, 50%);
+    max-width: 85%;
+    min-width: 85%;
+    animation: Panning 1s forwards;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    background-color: rgba(0, 0, 0, 0.37);
+    padding: 1%;
+    margin: 5%;
+    border: 2px solid rgb(0, 0, 0);
+}
+
+.sell-info p:nth-child(2){
+    animation-delay: 1s;
+}
+
+.sell-info p:nth-child(3){
+    animation-delay: 1.5s;
+
+}
+
+.sell-info p:nth-child(4){
+    animation-delay: 2s;
+
+}
+
+div .Box-Heading{
+
+    font-weight: bold;
+    color: #ff0000;
+}
+
+
+
+form {
+    animation: appear 3s forwards;
+    overflow: hidden;
+    z-index: 10;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(100%, -50%);
+    margin: 20px;
+    display: flex;
+    flex-direction: column; 
+    width: 20%;
+    height: 65%;
+    background-color: rgba(0, 0, 0, 0.37);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 50px rgb(0, 0, 0);
+
+}
+
+form input {
+    margin: 5px;
+    border-radius: 8px;
+    font-size: 20px;
+    
+}
+
+form p {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+}
+
+.lock-body {
+    overflow: hidden;
+
+}
