--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ nav {
     font-family: 'Roboto', sans-serif;
     color: rgba(255, 255, 255, 0.5);
     font-weight: bold;
-    border: 2px solid rgb(255, 0, 0);
+    border: 2px solid #4357AD;
 }
 
 .socials {
@@ -159,7 +159,7 @@ nav {
     color: white;
     text-shadow: 2px 2px 2px black;
     padding-top: 5px;
-    padding-bottom: 12px;
+    padding-bottom: 14px;
     margin-left: 2px;
     bottom: 55px;
     font-weight: bold;
@@ -169,7 +169,7 @@ nav {
     position: absolute;
     top: 20px;
     right: 5px;
-    background: rgba(255, 0, 0, 0.7);
+    background-color: #4357AD;
     text-shadow: 2px 2px 2px black;
     color: white;
     padding: 5px 10px;
