--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 
 .pages {
-    z-index: 2;
+    z-index: 200;
     position: fixed;
     font-size: 25px;
     top: 0px;
@@ -26,6 +26,7 @@ body {
 }
 
 nav {
+    
     z-index: 20;
     animation: fadeIn 2s;
     display: flex;
@@ -60,7 +61,8 @@ nav {
 }
 
 .socials {
-    z-index: 2;
+    z-index: 200;
+
     position: fixed;
     left: 85%;
     top: 2%;
@@ -74,8 +76,10 @@ nav {
 }
 
 .Title {
+
+    z-index: 220;
+
     font-size: 25px;
-    z-index: 3;
     position: fixed;
     display: flex; 
     top: -1%;
@@ -191,6 +195,7 @@ nav {
 }
 
 .SellCarImage {
+    flex: 1;
     transform-origin: center;
 
    
@@ -201,7 +206,8 @@ nav {
     border: 4px solid rgb(0, 0, 0);
     transform-origin: center;
     box-shadow: 0 0 50px rgb(0, 0, 0);
-    max-width: 100%;
+    display:block;
+    max-width: 40vh;
 
 }
 
@@ -576,7 +582,6 @@ video {
 }
 
 .sell-info {
-    
     border-radius: 10px;
     background-color: #C1666B;
     position: relative;
@@ -593,6 +598,52 @@ video {
 
 
 
+
+}
+
+@media (min-width: 1500px) {
+    .service2 img{
+        max-height: 28vh;
+    } 
+   .text-group1{
+    max-width: 30vh;
+   }
+
+  
+}
+
+
+@media  (max-width: 1500px){
+    .text-group1 h1{
+        font-size: 20px;
+       } 
+}
+    
+
+
+@media (max-height: 900px) {
+    .sell-info {
+        font-size: 12px;
+    }
+
+    .SellCarImage {
+        transform-origin: center;
+    }
+    .SellCarImage img{
+        transform-origin: center;
+    }
+
+    .info {
+        font-size: 12px;
+    }
+    .extra-info{
+        font-size: 12px;
+        
+    }
+    .service2 img {
+        margin-top: 2%;
+        
+    }
 
 }
 
@@ -794,7 +845,7 @@ form p {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    transform: translate(0%, 220%);
+    transform: translate(0%, 100%);
     scale: .9
 
  }
@@ -808,7 +859,7 @@ form p {
     flex-direction: column;
     max-width: 100%;
     width: 80%;
-    transform: translate(0%, -85%);
+    transform: translate(0%, 125%);
  }
 
 
@@ -836,7 +887,7 @@ form p {
 
     .calendar {
         scale: 1.0;
-        transform: translate(0%, 300%);
+        transform: translate(0%, 100%);
         background-color: rgba(0, 0, 0, 0.5);
         padding: 20px;
     }
@@ -966,8 +1017,17 @@ form p {
     animation: none;
 }
 
+
+
+
 }
 
+
+@media (max-width: 1500px) {
+    .home-container{
+        font-size: 22px;
+    }
+}
 
 /* 
 @media (max-width: 400px) {
